# reoriginal-btc

./: .gitignore  README.md
btc-c/: CMakeLists.txt  common.h  endian.h  hash.h  main.c  test.c  varint.h
